# CMakeTest

./: .clang-format  .gitignore  README.md
DynamicLibrary/: CMakeLists.txt  main.cpp
DynamicLibrary/geometry/: CMakeLists.txt  common.h  line.h
DynamicLibrary/geometry/entity/: line.cpp  line.h  point.cpp  point.h
DynamicLibrary1/geometry/: common.h  point.h
DynamicLibrary2/: main.cpp
DynamicLibrary2/geometry/: CMakeLists.txt  common.cpp  common.h
DynamicLibrary2/geometry/entity/: point.h
File1/: CMakeLists.txt
File2/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  main.cpp
File3/: CMakeLists.txt  main.cpp
File3/database/: data.cpp  data.h
File3/database/sql/: sql.cpp  sql.h
File3/entity/: line.cpp
GoogleTest/: CMakeLists.txt  main.cc
MultiExe/: CMakeLists.txt  main1.cc  main2.cc  test1.cc  test2.cc
Project/: CMakeLists.txt
Project/src/: CMakeLists.txt
Project/unittest/: algorithmTest.cc
StaticLibrary/: CMakeLists.txt  main.cpp
StaticLibrary/geometry/: CMakeLists.txt  line.h  utility.h
StaticLibrary1/geometry/: point.cpp  point.h
StaticLibrary2/geometry/: CMakeLists.txt  utility.cpp
Webassembly/: .gitignore  README.md
Webassembly/src/: CMakeLists.txt
Webassembly/src/wasm/: CppCallJs.h  EmscriptenBinding.cc  EmscriptenBinding.h  JsCallCpp.cc
basic/hello_world/: CMakeLists.txt
basic/multiple_subdirectories/: CMakeLists.txt  main.cpp
basic/multiple_subdirectories/math/: CMakeLists.txt
basic/multiple_subdirectories2/: CMakeLists.txt  main.cpp
basic/multiple_subdirectories2/src/: CMakeLists.txt  math_utility2.cpp  math_utility2.h
effective/make_date_time/: CMakeLists.txt  main.cpp
